--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,10 @@ column_limit = 80
 blank_line_before_nested_class_or_def = true
 blank_line_before_module_docstring = true
 indent_width = 2
+
+[tox:tox]
+envlist = py37
+
+[testenv]
+deps = pytest
+commands = pytest {posargs}
