Move .coveragerc to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,12 @@ commands = pytest {posargs}
 [tool:pytest]
 addopts = -ra -vv
 testpaths = tests
+
+[coverage:run]
+source=
+  emailer
+  tests
+
+[coverage:report]
+show_missing=true
+skip_covered=true
